--- a/src/components/elements/Footer.astro
+++ b/src/components/elements/Footer.astro
@@ -78,9 +78,8 @@ const footerLegal = [
     }
 ]
 ---
-<div class="mt-16"></div>
-<footer class="relative  bg-gradient-to-tr from-gray-100 to-gray-200 dark:from-gray-900 pt-28 rounded-t-3xl">
-    <div class="absolute right-0 top-0 h-full w-full flex justify-end">
+<!-- <footer class="relative  bg-gradient-to-tr from-gray-100 to-gray-200 dark:from-gray-900 pt-28 rounded-t-3xl"> -->
+    <!-- <div class="absolute right-0 top-0 h-full w-full flex justify-end">
         <div class="w-28 h-28 overflow-hidden flex rounded-xl relative blur-2xl">
             <span
               class="absolute w-16 h-16 -top-1 -right-1 bg-green-500 rounded-md rotate-45"
@@ -121,15 +120,13 @@ const footerLegal = [
                             <span class="absolute w-2 h-2 rounded-full bg-heading-1 top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2"></span>
                         </div>
                         <div class="inline-flex text-lg font-semibold text-heading-1">
-                            AgenceX
+                            Hlo
                         </div>
                     </a>
-                    <Paragraph className={"mt-8"}>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae, maiores nam doloribus id magni
-                    </Paragraph>
+                   
                 </div>
 
-                <!-- social links -->
+                social links 
                 <div class="min-h-max flex items-center gap-4 text-heading-3 mt-8">
                     <a href="#" class="transition hover:text-heading-1 hover:scale-105">
                         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="w-5 h-5" viewBox="0 0 16 16">
@@ -161,28 +158,18 @@ const footerLegal = [
                 </div>
             </div>
 
-            <GroupFooterNav>
-                <FooterNav title={"Company"} navItems={footerCompany}/>
-                <FooterNav title={"Solutions"} navItems={footerNav1}/>
-            </GroupFooterNav>
-
-            <GroupFooterNav>
-                <FooterNav title={"Support"} navItems={footerSupport}/>
-                <FooterNav title={"Ressources"} navItems={footerLegal}/>
-            </GroupFooterNav>
+           
 
         </div>
-    </Container>
-    <div class=" bg-gradient-to-tl from-box-bg py-2 relative">
+    </Container> -->
+
         <Container>
             <div class="flex justify-between items-center gap-6 md:text-lg text-heading-3">
                 <div>
-                    &copy; <span id="year"></span> AgenceX. All right reserved
+                    &copy; <span id="year"></span> Hlo Ventures, All Rights Reserved 2023
                 </div>
-                <div>
-                    Proudly made by <a href="https://github.com/johnkat-mj" target="_blank" class="font-semibold">John Kat</a>
-                </div>
+                
             </div>
         </Container>
-    </div>
-</footer>
+  
+<!-- </footer> -->
