--- a/src/components/sections/Features.astro
+++ b/src/components/sections/Features.astro
@@ -9,31 +9,37 @@ import Title from "../shared/Title.astro";
     <Container className="flex flex-col midmd:flex-row gap-10 lg:gap-12">
         
         <div class="flex-1 flex midmd:w-7/12 lg:w-1/2 flex-col">
-            <Title>
-                We provide Important Features for Digital Marketing
-            </Title>
+            
             <Paragraph className="mt-8">
-                Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-                <br> 
-                Minus, saepe aliquid autem alias vero distinctio dignissimos consequatur?
+                We are also deeply grateful for the invaluable guidance and mentorship provided by Amrish Krishnan, Founding Partner and CEO of MyProBuddy, who plays a pivotal role in uplifting our venture. His expertise and vision have been instrumental in our journey.
+                <br>
             </Paragraph>
             <Paragraph className="mt-2">
-                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Minus, saepe aliquid autem alias vero distinctio dignissimos consequatur?
+                Our leadership team at Hlo is a powerhouse of talent, including:
             </Paragraph>
             <ul class="mt-8 space-y-4 text-heading-3 font-medium">
                 <li>
-                    <span class="font-bold bg-box-bg rounded-full w-8 h-8 mr-3 text-primary inline-flex justify-center items-center">&checkmark;</span> Web site Analysis
+                    <span class="font-bold bg-box-bg rounded-full w-8 h-8 mr-3 text-primary inline-flex justify-center items-center">&checkmark;</span> Myself, Aravindh Ravichandran
+                    
                 </li>
                 <li>
-                    <span class="font-bold bg-box-bg rounded-full w-8 h-8 mr-3 text-primary inline-flex justify-center items-center">&checkmark;</span> Free optimazation.
+                    <span class="font-bold bg-box-bg rounded-full w-8 h-8 mr-3 text-primary inline-flex justify-center items-center">&checkmark;</span>   Amrish Krishnan
                 </li>
                 <li>
-                    <span class="font-bold bg-box-bg rounded-full w-8 h-8 mr-3 text-primary inline-flex justify-center items-center">&checkmark;</span> Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                    <span class="font-bold bg-box-bg rounded-full w-8 h-8 mr-3 text-primary inline-flex justify-center items-center">&checkmark;</span> Rahul
                 </li>
                 <li>
-                    <span class="font-bold bg-box-bg rounded-full w-8 h-8 mr-3 text-primary inline-flex justify-center items-center">&checkmark;</span> Content Optimization.
+                    <span class="font-bold bg-box-bg rounded-full w-8 h-8 mr-3 text-primary inline-flex justify-center items-center">&checkmark;</span>Venkat Sai Sujan
+                </li>
+                <li>
+                    <span class="font-bold bg-box-bg rounded-full w-8 h-8 mr-3 text-primary inline-flex justify-center items-center">&checkmark;</span>Sabari
                 </li>
             </ul>
+            <Paragraph className="mt-8">
+            Together, we are dedicated to driving innovation, shaping narratives, and creating a brighter future for generations to come. <br> </Paragraph>
+            <Paragraph className="mt-2">
+Join us in our journey as we embark on ambitious endeavors, take the long view, and empower innovators and storytellers to flourish. Together, we'll shape a brighter future, leaving an indelible legacy for generations to come.
+</Paragraph>
         </div>
 
         <div class="max-w-md mx-auto midmd:max-w-none lg:mx-0  lg:pr-10 xl:pr-2 flex-1 flex w-11/12 midmd:w-5/12 lg:w-1/2 midmd:h-auto">
