--- a/src/components/sections/CTA.astro
+++ b/src/components/sections/CTA.astro
@@ -44,12 +44,11 @@ import Paragraph from "../shared/Paragraph.astro";
           Quick Start your <span class="text-transparent bg-clip-text bg-gradient-to-br from-indigo-600 from-20% via-primary via-30% to-green-600">Strategic Digital</span> Marketing Campaing
         </h1>
         <Paragraph className={"pt-10"}>
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente
-          delectus architecto ullam earum
+          As the Founder and current CEO of Hlo, I am honored to lead this dynamic conglomerate, where innovation meets storytelling, and where the future is both powered by technology and anchored in timeless narratives.
         </Paragraph>
         <div class="mx-auto max-w-md sm:max-w-xl pt-10">
           <Button variant={"primary"}>
-            <span class="text-white relative z-[5]">Get In Touch</span>
+            <span class="text-white relative z-[5]">Join us</span>
           </Button>
         </div>
       </div>
