--- a/src/components/sections/Hero.astro
+++ b/src/components/sections/Hero.astro
@@ -18,13 +18,15 @@ import ByNumber from "./ByNumber.astro";
             
             <h1 class="text-3xl/tight sm:text-4xl/tight md:text-5xl/tight xl:text-6xl/tight
              font-bold text-heading-1">
-             Social Media  <span class="text-transparent bg-clip-text bg-gradient-to-br from-indigo-600 from-20% via-primary via-30% to-green-600">Marketing</span> is the Best Ever.
+             Welcome to  <span class="text-transparent bg-clip-text bg-gradient-to-br from-indigo-600 from-20% via-primary via-30% to-green-600"> Hlo </span> 
             </h1>
+            <h2  class="text-3xl/tight sm:text-4xl/tight md:text-5xl/tight xl:text-4xl/tight
+            font-bold text-heading-1">Shaping the Future, Crafting Timeless Tales</h2>
             <Paragraph className="mt-8">
-                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolores repellat perspiciatis aspernatur quis voluptatum porro incidunt, 
-                libero sequi quos eos velit
+                 <br/>
+                At Hlo, we are more than just a conglomerate – we are architects of the future, dedicated to fueling innovation, and shaping timeless tales. With a dynamic portfolio that includes Rook and Legacies, we are on a mission to empower great entrepreneurs and companies to flourish, all while taking the long-term view and investing at the scale of the opportunities we see.
             </Paragraph>
-            <div class="mt-10  w-full flex max-w-md mx-auto lg:mx-0">
+            <!-- <div class="mt-10  w-full flex max-w-md mx-auto lg:mx-0">
                 <div class="flex sm:flex-row flex-col gap-5 w-full">
                     <form action="#"  class="py-1 pl-6 w-full pr-1 flex gap-3 items-center text-heading-3 shadow-lg shadow-box-shadow
                       border border-box-border bg-box-bg rounded-full ease-linear focus-within:bg-body  focus-within:border-primary">
@@ -46,7 +48,7 @@ import ByNumber from "./ByNumber.astro";
                         </Button>
                     </form>
                 </div>
-            </div>
+            </div> -->
         </div>
 
         <div class="flex flex-1 lg:w-1/2 lg:h-auto relative lg:max-w-none lg:mx-0 mx-auto max-w-3xl">
@@ -54,5 +56,5 @@ import ByNumber from "./ByNumber.astro";
         </div>
     </Container>
 
-    <ByNumber/>
+    <!-- <ByNumber/> -->
 </section>
