--- a/src/components/sections/CTA.astro
+++ b/src/components/sections/CTA.astro
@@ -43,9 +43,15 @@ import Paragraph from "../shared/Paragraph.astro";
         >
           Quick Start your <span class="text-transparent bg-clip-text bg-gradient-to-br from-indigo-600 from-20% via-primary via-30% to-green-600">Strategic Digital</span> Marketing Campaing
         </h1>
+       
         <Paragraph className={"pt-10"}>
           As the Founder and current CEO of Hlo, I am honored to lead this dynamic conglomerate, where innovation meets storytelling, and where the future is both powered by technology and anchored in timeless narratives.
         </Paragraph>
+        <Paragraph className={"pt-10"}>
+          Join us in our journey as we embark on ambitious endeavors, take the long view, and empower innovators and storytellers to flourish. Together, we'll shape a brighter future, leaving an indelible legacy for generations to come.
+        </Paragraph>
+
+
         <div class="mx-auto max-w-md sm:max-w-xl pt-10">
           <Button variant={"primary"}>
             <span class="text-white relative z-[5]">Join us</span>
