--- a/src/components/sections/ventures.astro
+++ b/src/components/sections/ventures.astro
@@ -31,14 +31,14 @@ import Title from "../shared/Title.astro";
                     </svg> 
                 </span>
             </Service>
-            <Service title="Legacies Forum: Fostering Connections and Spreading the Word" description="Legacies Forum is your gateway to effective PR and Media solutions. We specialize in fostering meaningful connections and spreading the word about your brand or cause. Our PR Application and Media House offer a wide range of services to help you connect with your audience and make a lasting impact.">
+            <Service title="Legacies Navigate: Your Destination for Online Media Publishing" description="Legacies Navigate is your gateway to effective PR and Media solutions. We specialize in fostering meaningful connections and spreading the word about your brand or cause. Our PR Application and Media House offer a wide range of services to help you connect with your audience and make a lasting impact.">
                 <span slot="icon">
                     <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
                         <path stroke-linecap="round" stroke-linejoin="round" d="M6 12L3.269 3.126A59.768 59.768 0 0121.485 12 59.77 59.77 0 013.27 20.876L5.999 12zm0 0h7.5" />
                     </svg> 
                 </span>
             </Service>
-            <Service title="Legacies Navigate: Your Destination for Online Media Publishing" description="Legacies Navigate is your destination for Online Media Publishing. We believe that information and inspiration are the building blocks of a better tomorrow. Explore our platform to access a wealth of knowledge, thought-provoking content, and insights that drive innovation and change.">
+            <Service title="Legacies Forum: Fostering Connections and Spreading the Word" description="Legacies Forum is your destination for Online Media Publishing. We believe that information and inspiration are the building blocks of a better tomorrow. Explore our platform to access a wealth of knowledge, thought-provoking content, and insights that drive innovation and change.">
                 <span slot="icon">
                     <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
                         <path stroke-linecap="round" stroke-linejoin="round" d="M6 12L3.269 3.126A59.768 59.768 0 0121.485 12 59.77 59.77 0 013.27 20.876L5.999 12zm0 0h7.5" />
