--- a/src/components/sections/Brands.astro
+++ b/src/components/sections/Brands.astro
@@ -8,7 +8,7 @@ import Title from "../shared/Title.astro";
     <Container className="space-y-8">
         <div class="text-center max-w-3xl mx-auto">
             <Title>
-                Trusted by companies like
+                Our ventures
             </Title>
         </div>
         <div class="flex justify-center flex-wrap gap-4">
@@ -19,14 +19,16 @@ import Title from "../shared/Title.astro";
                 <img src="/logos/RookSaaS.png" width="100" height="60" alt="slack" class="h-7 sm:h-10 w-auto ease-linear duration-300 grayscale group-hover:!grayscale-0 group-hover:scale-105">
             </div>
             <div class="p-4 sm:p-5 rounded-xl bg-body border border-box-border group">
-                <img src="/logos/LegaciesN.png" width="100" height="60" alt="paypal" class="h-7 sm:h-10 w-auto ease-linear duration-300 grayscale group-hover:!grayscale-0 group-hover:scale-105">
-            </div>
-            <div class="p-4 sm:p-5 rounded-xl bg-body border border-box-border group">
                 <img src="/logos/Fellows.png" width="100" height="60" alt="slack" class="h-7 sm:h-10 w-auto ease-linear duration-300 grayscale group-hover:!grayscale-0 group-hover:scale-105">
+            </div>
+           
+            <div class="p-4 sm:p-5 rounded-xl bg-body border border-box-border group">
+                <img src="/logos/LegaciesN.png" width="100" height="60" alt="paypal" class="h-7 sm:h-10 w-auto ease-linear duration-300 grayscale group-hover:!grayscale-0 group-hover:scale-105">
             </div>
             <div class="p-4 sm:p-5 rounded-xl bg-body border border-box-border group">
                 <img src="/logos/Legacies.png" width="100" height="60" alt="paypal" class="h-7 sm:h-10 w-auto ease-linear duration-300 grayscale group-hover:!grayscale-0 group-hover:scale-105">
             </div>
+           
             <div class="p-4 sm:p-5 rounded-xl bg-body border border-box-border group">
                 <img src="/logos/LWL.png" width="100" height="60" alt="paypal" class="h-7 sm:h-10 w-auto ease-linear duration-300 grayscale group-hover:!grayscale-0 group-hover:scale-105">
             </div>
