--- a/src/components/sections/Features.astro
+++ b/src/components/sections/Features.astro
@@ -11,7 +11,7 @@ import Title from "../shared/Title.astro";
         <div class="flex-1 flex midmd:w-7/12 lg:w-1/2 flex-col">
             
             <Paragraph className="mt-8">
-                We are also deeply grateful for the invaluable guidance and mentorship provided by Amrish Krishnan, Founding Partner and CEO of MyProBuddy, who plays a pivotal role in uplifting our venture. His expertise and vision have been instrumental in our journey.
+                We are also deeply grateful for the invaluable guidance and mentorship provided by Amrish Krishnan. He plays a pivotal role in uplifting our venture. His expertise and vision have been instrumental in our journey.
                 <br>
             </Paragraph>
             <Paragraph className="mt-2">
@@ -19,7 +19,7 @@ import Title from "../shared/Title.astro";
             </Paragraph>
             <ul class="mt-8 space-y-4 text-heading-3 font-medium">
                 <li>
-                    <span class="font-bold bg-box-bg rounded-full w-8 h-8 mr-3 text-primary inline-flex justify-center items-center">&checkmark;</span> Myself, Aravindh Ravichandran
+                    <span class="font-bold bg-box-bg rounded-full w-8 h-8 mr-3 text-primary inline-flex justify-center items-center">&checkmark;</span> Aravindh Ravichandran
                     
                 </li>
                 <li>
