--- a/src/components/sections/Services.astro
+++ b/src/components/sections/Services.astro
@@ -10,11 +10,10 @@ import Title from "../shared/Title.astro";
     <Container className="space-y-10 md:sapce-y-12">
         <div class="text-center max-w-3xl mx-auto space-y-4">
             <Title>
-                What we offer
+                What We Offer
             </Title>
             <Paragraph>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit.
-            </Paragraph>
+                State of Art Ecosystem
         </div>
         <div class="grid sm:grid-cols-2 lg:grid-cols-2 gap-6 lg:gap-8">
             <Service title="🚀 Rook: Igniting Technological Revolution" description="At Rook, we are at the forefront of technological advancement. Our tech conglomerate is committed to pushing the boundaries of innovation, from AI-powered solutions to sustainable technology that transforms industries. Join us in revolutionizing the tech landscape and shaping a brighter tomorrow. #RookTech #InnovationUnleashed">
