--- a/src/components/sections/ventures.astro
+++ b/src/components/sections/ventures.astro
@@ -10,11 +10,11 @@ import Title from "../shared/Title.astro";
     <Container className="space-y-10 md:sapce-y-12">
         <div class="text-center max-w-3xl mx-auto space-y-4">
             <Title>
-                What we offer
+                What we do
             </Title>
-            <Paragraph>
+            <!-- <Paragraph>
                 Lorem ipsum dolor sit amet consectetur adipisicing elit.
-            </Paragraph>
+            </Paragraph> -->
         </div>
         <div class="grid sm:grid-cols-2 lg:grid-cols-2 gap-6 lg:gap-8">
             <Service title="Rook Fellows: Elevating Your Brand in the Digital Realm" description="At Rook Fellows, we understand that in today's digital age, your brand's online presence is paramount. We specialize in providing top-notch Digital Marketing Services tailored to your unique needs. Whether it's boosting your social media engagement, optimizing your SEO strategy, or crafting compelling content, we have a team of experts ready to take your brand to new heights in the digital landscape">
@@ -45,14 +45,14 @@ import Title from "../shared/Title.astro";
                     </svg> 
                 </span>
             </Service>
-            <!-- <Service title="Amazon affiliate marketing" description="Sunt, ipsam, necessitatibus sint fugit officia laboriosam minima ab ullam at magni et. Quaerat, sint!">
+            <Service title="Lead with Legacies: Nurturing Tomorrow's Leaders" description="Lead with Legacies is an Ed-Tech Company committed to nurturing the leaders of tomorrow. We provide innovative educational solutions that empower individuals to excel. Our mission is to create a world where education knows no boundaries, and knowledge is accessible to all.">
                 <span slot="icon">
                     <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
                         <path stroke-linecap="round" stroke-linejoin="round" d="M6 12L3.269 3.126A59.768 59.768 0 0121.485 12 59.77 59.77 0 013.27 20.876L5.999 12zm0 0h7.5" />
                     </svg> 
                 </span>
             </Service>
-            <Service title="Email marketing" description="Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corrupti qui soluta cupiditate">
+           <!--  <Service title="Email marketing" description="Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corrupti qui soluta cupiditate">
                 <span slot="icon">
                     <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
                         <path stroke-linecap="round" stroke-linejoin="round" d="M6 12L3.269 3.126A59.768 59.768 0 0121.485 12 59.77 59.77 0 013.27 20.876L5.999 12zm0 0h7.5" />
