--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -14,7 +14,7 @@ const { title } = Astro.props;
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="icon" type="image/svg+xml" href="/HF.png" />
     <meta name="generator" content={Astro.generator} />
     <meta name="description" content="Hlo">
     <title>Hlo - Investing company</title>
@@ -40,7 +40,7 @@ const { title } = Astro.props;
     ) {
       document.documentElement.classList.add("dark");
     } else {
-      document.documentElement.classList.remove("dark");
+      document.documentElement.classList.add("dark");
     }
     if (switchTheme) {
       switchTheme.addEventListener("click", (e) => {
@@ -48,17 +48,17 @@ const { title } = Astro.props;
         const doc = document.documentElement;
         if (doc) {
           if (localStorage.getItem("appTheme")) {
-            if (localStorage.getItem("appTheme") === "light") {
+            if (localStorage.getItem("appTheme") === "dark") {
               doc.classList.add("dark");
               localStorage.setItem("appTheme", "dark");
             } else {
               document.documentElement.classList.remove("dark");
-              localStorage.setItem("appTheme", "light");
+              localStorage.setItem("appTheme", "dark");
             }
           } else {
             if (doc.classList.contains("dark")) {
               doc.classList.remove("dark");
-              localStorage.setItem("appTheme", "light");
+              localStorage.setItem("appTheme", "dark");
             } else {
               doc.classList.add("dark");
               localStorage.setItem("appTheme", "dark");
