--- a/src/components/sections/CTA.astro
+++ b/src/components/sections/CTA.astro
@@ -43,7 +43,7 @@ import Paragraph from "../shared/Paragraph.astro";
         >
         From Our<span class="text-transparent bg-clip-text bg-gradient-to-br from-indigo-600 from-20% via-primary via-30% to-green-600"> CEO's</span> Desk 
         </h1>
-        <img class="rounded-xl" src="./images/avr.webp" alt="img" width={250} height={380}></img>
+        <img class="rounded-full" src="./images/avr.webp" alt="img" width={250} height={380}></img>
         <Paragraph className={"pt-10"}>
           As the Founder and current CEO of Hlo, We are honored to lead this dynamic conglomerate, where innovation meets storytelling, and where the future is both powered by technology and anchored in timeless narratives.
         </Paragraph>
