--- a/src/components/sections/ventures.astro
+++ b/src/components/sections/ventures.astro
@@ -17,35 +17,35 @@ import Title from "../shared/Title.astro";
             </Paragraph> -->
         </div>
         <div class="grid sm:grid-cols-2 lg:grid-cols-2 gap-6 lg:gap-8">
-            <Service title="Rook Fellows: Elevating Your Brand in the Digital Realm" description="At Rook Fellows, we understand that in today's digital age, your brand's online presence is paramount. We specialize in providing top-notch Digital Marketing Services tailored to your unique needs. Whether it's boosting your social media engagement, optimizing your SEO strategy, or crafting compelling content, we have a team of experts ready to take your brand to new heights in the digital landscape">
+            <Service title="Rook Fellows" description="At Rook Fellows, we understand that in today's digital age, your brand's online presence is paramount. We specialize in providing top-notch Digital Marketing Services tailored to your unique needs. Whether it's boosting your social media engagement, optimizing your SEO strategy, or crafting compelling content, we have a team of experts ready to take your brand to new heights in the digital landscape">
                 <span slot="icon">
                     <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
                         <path stroke-linecap="round" stroke-linejoin="round" d="M6 12L3.269 3.126A59.768 59.768 0 0121.485 12 59.77 59.77 0 013.27 20.876L5.999 12zm0 0h7.5" />
                     </svg> 
                 </span>
             </Service>
-            <Service title="Rook SaaS: Streamlining Your Operations" description="Rook SaaS is your go-to destination for cutting-edge Software Tools designed to streamline and supercharge your operations. Our suite of software solutions is crafted with a keen eye on innovation and efficiency. From project management to data analytics, we provide the tools you need to enhance productivity, make data-driven decisions, and stay ahead of the competition. Join hands with Rook SaaS.">
+            <Service title="Rook SaaS" description="Rook SaaS is your go-to destination for cutting-edge Software Tools designed to streamline and supercharge your operations. Our suite of software solutions is crafted with a keen eye on innovation and efficiency. From project management to data analytics, we provide the tools you need to enhance productivity, make data-driven decisions, and stay ahead of the competition. Join hands with Rook SaaS.">
                 <span slot="icon">
                     <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
                         <path stroke-linecap="round" stroke-linejoin="round" d="M6 12L3.269 3.126A59.768 59.768 0 0121.485 12 59.77 59.77 0 013.27 20.876L5.999 12zm0 0h7.5" />
                     </svg> 
                 </span>
             </Service>
-            <Service title="Legacies Navigate: Your Destination for Online Media Publishing" description="Legacies Navigate is your gateway to effective PR and Media solutions. We specialize in fostering meaningful connections and spreading the word about your brand or cause. Our PR Application and Media House offer a wide range of services to help you connect with your audience and make a lasting impact.">
+            <Service title="Legacies Navigate" description="Legacies Navigate is your gateway to effective PR and Media solutions. We specialize in fostering meaningful connections and spreading the word about your brand or cause. Our PR Application and Media House offer a wide range of services to help you connect with your audience and make a lasting impact.">
                 <span slot="icon">
                     <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
                         <path stroke-linecap="round" stroke-linejoin="round" d="M6 12L3.269 3.126A59.768 59.768 0 0121.485 12 59.77 59.77 0 013.27 20.876L5.999 12zm0 0h7.5" />
                     </svg> 
                 </span>
             </Service>
-            <Service title="Legacies Forum: Fostering Connections and Spreading the Word" description="Legacies Forum is your destination for Online Media Publishing. We believe that information and inspiration are the building blocks of a better tomorrow. Explore our platform to access a wealth of knowledge, thought-provoking content, and insights that drive innovation and change.">
+            <Service title="Legacies Forum" description="Legacies Forum is your destination for Online Media Publishing. We believe that information and inspiration are the building blocks of a better tomorrow. Explore our platform to access a wealth of knowledge, thought-provoking content, and insights that drive innovation and change.">
                 <span slot="icon">
                     <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
                         <path stroke-linecap="round" stroke-linejoin="round" d="M6 12L3.269 3.126A59.768 59.768 0 0121.485 12 59.77 59.77 0 013.27 20.876L5.999 12zm0 0h7.5" />
                     </svg> 
                 </span>
             </Service>
-            <Service title="Lead with Legacies: Nurturing Tomorrow's Leaders" description="Lead with Legacies is an Ed-Tech Company committed to nurturing the leaders of tomorrow. We provide innovative educational solutions that empower individuals to excel. Our mission is to create a world where education knows no boundaries, and knowledge is accessible to all.">
+            <Service title="Lead with Legacies" description="Lead with Legacies is an Ed-Tech Company committed to nurturing the leaders of tomorrow. We provide innovative educational solutions that empower individuals to excel. Our mission is to create a world where education knows no boundaries, and knowledge is accessible to all.">
                 <span slot="icon">
                     <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
                         <path stroke-linecap="round" stroke-linejoin="round" d="M6 12L3.269 3.126A59.768 59.768 0 0121.485 12 59.77 59.77 0 013.27 20.876L5.999 12zm0 0h7.5" />
