--- a/src/components/sections/CTA.astro
+++ b/src/components/sections/CTA.astro
@@ -44,10 +44,11 @@ import Paragraph from "../shared/Paragraph.astro";
         From Our<span class="text-transparent bg-clip-text bg-gradient-to-br from-indigo-600 from-20% via-primary via-30% to-green-600"> CEO's</span> Desk 
         </h1>
         <img class="rounded-full" src="./images/avr.webp" alt="img" width={250} height={380}></img>
-        <Paragraph className={"pt-10"}>
+        <span class="text-2xl pt-5 text-white">Aravindh Ravichandran</span>
+        <Paragraph className={"pt-5"}>
           As the Founder and current CEO of Hlo, We are honored to lead this dynamic conglomerate, where innovation meets storytelling, and where the future is both powered by technology and anchored in timeless narratives.
         </Paragraph>
-        <Paragraph className={"pt-10"}>
+        <Paragraph className={"pt-5"}>
           Join us in our journey as we embark on ambitious endeavors, take the long view, and empower innovators and storytellers to flourish. Together, we'll shape a brighter future, leaving an indelible legacy for generations to come.
         </Paragraph>
 
