--- a/src/components/sections/Features.astro
+++ b/src/components/sections/Features.astro
@@ -19,20 +19,20 @@ import Title from "../shared/Title.astro";
             </Paragraph>
             <ul class="mt-8 space-y-4 text-heading-3 font-medium">
                 <li>
-                    <span class="font-bold bg-box-bg rounded-full w-8 h-8 mr-3 text-primary inline-flex justify-center items-center">&checkmark;</span> Aravindh Ravichandran
+                    <a href="https://www.linkedin.com/in/avra/"><span class="font-bold bg-box-bg rounded-full w-8 h-8 mr-3 text-primary inline-flex justify-center items-center">&checkmark;</span> Aravindh Ravichandran</a>
                     
                 </li>
                 <li>
-                    <span class="font-bold bg-box-bg rounded-full w-8 h-8 mr-3 text-primary inline-flex justify-center items-center">&checkmark;</span>   Amrish Krishnan
+                    <a href="https://www.linkedin.com/in/amrish-krishnan/"> <span class="font-bold bg-box-bg rounded-full w-8 h-8 mr-3 text-primary inline-flex justify-center items-center">&checkmark;</span>   Amrish Krishnan</a>
                 </li>
                 <li>
-                    <span class="font-bold bg-box-bg rounded-full w-8 h-8 mr-3 text-primary inline-flex justify-center items-center">&checkmark;</span> Rahul
+                    <a href="https://www.linkedin.com/in/rahul-b-b23078225"> <span class="font-bold bg-box-bg rounded-full w-8 h-8 mr-3 text-primary inline-flex justify-center items-center">&checkmark;</span> Rahul</a>
                 </li>
                 <li>
-                    <span class="font-bold bg-box-bg rounded-full w-8 h-8 mr-3 text-primary inline-flex justify-center items-center">&checkmark;</span>Venkat Sai Sujan
+                    <a href="https://www.linkedin.com/in/venkat-sai-sujan-1b870b31/">  <span class="font-bold bg-box-bg rounded-full w-8 h-8 mr-3 text-primary inline-flex justify-center items-center">&checkmark;</span>Venkat Sai Sujan</a>
                 </li>
                 <li>
-                    <span class="font-bold bg-box-bg rounded-full w-8 h-8 mr-3 text-primary inline-flex justify-center items-center">&checkmark;</span>Sabari
+                    <a href="https://www.linkedin.com/in/sabari-h-80812221b/"><span class="font-bold bg-box-bg rounded-full w-8 h-8 mr-3 text-primary inline-flex justify-center items-center">&checkmark;</span>Sabari</a>
                 </li>
             </ul>
             <Paragraph className="mt-8">
