--- a/src/components/sections/AboutUs.astro
+++ b/src/components/sections/AboutUs.astro
@@ -27,21 +27,21 @@ import Title from "../shared/Title.astro";
                 
             </Paragraph> -->
             <div class="pt-5 flex items-center gap-4 max-w-3xl md:max-w-[none]">
-                <Info description="Monishaa takes the reins at Legacies, leading the charge in shaping timeless tales." title="👤 Monishaa">
+                <a href="https://www.linkedin.com/in/monishaakm/"> <Info description="Monishaa takes the reins at Legacies, leading the charge in shaping timeless tales." title="👤 Monishaa">
                     <!-- <span slot="icon">
                          <svg xmlns="http://www.w3.org/2000/svg" width="30" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-4 h-4 sm:w-5 sm:h-5">
                             <path stroke-linecap="round" stroke-linejoin="round" d="M3.75 13.5l10.5-11.25L12 10.5h8.25L9.75 21.75 12 13.5H3.75z" />
                         </svg>                             
                     </span> -->
-                </Info>
-                <Info description="Kishore Kumar assumes leadership at Rook, where innovation knows no bounds." title="👤 Kishore Kumar">
+                </Info></a\>
+                <a href="https://www.linkedin.com/in/kishore-kumar-lkk/">   <Info description="Kishore Kumar assumes leadership at Rook, where innovation knows no bounds." title="👤 Kishore Kumar"> 
                     <!-- <span slot="icon">
                         <svg xmlns="http://www.w3.org/2000/svg" width="30" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-4 h-4 sm:w-5 sm:h-5">
                             <path stroke-linecap="round" stroke-linejoin="round" d="M2.036 12.322a1.012 1.012 0 010-.639C3.423 7.51 7.36 4.5 12 4.5c4.638 0 8.573 3.007 9.963 7.178.07.207.07.431 0 .639C20.577 16.49 16.64 19.5 12 19.5c-4.638 0-8.573-3.007-9.963-7.178z" />
                             <path stroke-linecap="round" stroke-linejoin="round" d="M15 12a3 3 0 11-6 0 3 3 0 016 0z" />
                         </svg>
                     </span> -->
-                </Info>
+                </Info></a>
             </div>
         </div>
     </Container>
