--- a/src/components/sections/Services.astro
+++ b/src/components/sections/Services.astro
@@ -16,14 +16,14 @@ import Title from "../shared/Title.astro";
                 State of Art Ecosystem
         </div>
         <div class="grid sm:grid-cols-2 lg:grid-cols-2 gap-6 lg:gap-8">
-            <Service title="🚀 Rook: Igniting Technological Revolution" description="At Rook, we are at the forefront of technological advancement. Our tech conglomerate is committed to pushing the boundaries of innovation, from AI-powered solutions to sustainable technology that transforms industries. Join us in revolutionizing the tech landscape and shaping a brighter tomorrow. #RookTech #InnovationUnleashed">
+            <Service title="🚀 Rook" description="At Rook, we are at the forefront of technological advancement. Our tech conglomerate is committed to pushing the boundaries of innovation, from AI-powered solutions to sustainable technology that transforms industries. Join us in revolutionizing the tech landscape and shaping a brighter tomorrow. #RookTech #InnovationUnleashed">
                 <span slot="icon">
                     <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
                         <path stroke-linecap="round" stroke-linejoin="round" d="M6 12L3.269 3.126A59.768 59.768 0 0121.485 12 59.77 59.77 0 013.27 20.876L5.999 12zm0 0h7.5" />
                     </svg> 
                 </span>
             </Service>
-            <Service title="📖 Legacies: Shaping Timeless Tales" description="Legacies is where narratives transcend time. We craft stories that endure, sparking innovation and inspiring change that resonates for generations. Join us in scripting media's future and weaving stories that leave an indelible mark on hearts and minds. #LegaciesMedia #StorytellingEternity">
+            <Service title="📖 Legacies" description="Legacies is where narratives transcend time. We craft stories that endure, sparking innovation and inspiring change that resonates for generations. Join us in scripting media's future and weaving stories that leave an indelible mark on hearts and minds. #LegaciesMedia #StorytellingEternity">
                 <span slot="icon">
                     <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
                         <path stroke-linecap="round" stroke-linejoin="round" d="M6 12L3.269 3.126A59.768 59.768 0 0121.485 12 59.77 59.77 0 013.27 20.876L5.999 12zm0 0h7.5" />
