--- a/src/components/sections/Features.astro
+++ b/src/components/sections/Features.astro
@@ -11,28 +11,34 @@ import Title from "../shared/Title.astro";
         <div class="flex-1 flex midmd:w-7/12 lg:w-1/2 flex-col">
             
             <Paragraph className="mt-8">
-                We are also deeply grateful for the invaluable guidance and mentorship provided by Amrish Krishnan. He plays a pivotal role in uplifting our venture. His expertise and vision have been instrumental in our journey.
+                We are also deeply grateful for the invaluable guidance and mentorship provided by <span class="font-black">Amrish Krishnan </span>. He plays a pivotal role in uplifting our venture. His expertise and vision have been instrumental in our journey.
                 <br>
             </Paragraph>
             <Paragraph className="mt-2">
                 Our leadership team at Hlo is a powerhouse of talent, including:
             </Paragraph>
-            <ul class="mt-8 space-y-4 text-heading-3 font-medium">
+            <ul class="mt-8 space-y-4 font-black text-heading-3 ">
                 <li>
                     <a href="https://www.linkedin.com/in/avra/"><span class="font-bold bg-box-bg rounded-full w-8 h-8 mr-3 text-primary inline-flex justify-center items-center">&checkmark;</span> Aravindh Ravichandran</a>
                     
                 </li>
                 <li>
-                    <a href="https://www.linkedin.com/in/amrish-krishnan/"> <span class="font-bold bg-box-bg rounded-full w-8 h-8 mr-3 text-primary inline-flex justify-center items-center">&checkmark;</span>   Amrish Krishnan</a>
+                    <a href="https://www.linkedin.com/in/amrish-krishnan/"> <span class="font-black bg-box-bg rounded-full w-8 h-8 mr-3 text-primary inline-flex justify-center items-center">&checkmark;</span>   Amrish Krishnan</a>
                 </li>
                 <li>
-                    <a href="https://www.linkedin.com/in/rahul-b-b23078225"> <span class="font-bold bg-box-bg rounded-full w-8 h-8 mr-3 text-primary inline-flex justify-center items-center">&checkmark;</span> Rahul</a>
+                    <a href="https://www.linkedin.com/in/rahul-b-b23078225"> <span class="font-black bg-box-bg rounded-full w-8 h-8 mr-3 text-primary inline-flex justify-center items-center">&checkmark;</span> Rahul</a>
                 </li>
                 <li>
-                    <a href="https://www.linkedin.com/in/venkat-sai-sujan-1b870b31/">  <span class="font-bold bg-box-bg rounded-full w-8 h-8 mr-3 text-primary inline-flex justify-center items-center">&checkmark;</span>Venkat Sai Sujan</a>
+                    <a href="https://www.linkedin.com/in/venkat-sai-sujan-1b870b31/">  <span class="font-black bg-box-bg rounded-full w-8 h-8 mr-3 text-primary inline-flex justify-center items-center">&checkmark;</span>Venkat Sai Sujan</a>
                 </li>
                 <li>
-                    <a href="https://www.linkedin.com/in/sabari-h-80812221b/"><span class="font-bold bg-box-bg rounded-full w-8 h-8 mr-3 text-primary inline-flex justify-center items-center">&checkmark;</span>Sabari</a>
+                    <a href="https://www.linkedin.com/in/sabari-h-80812221b/"><span class="font-black bg-box-bg rounded-full w-8 h-8 mr-3 text-primary inline-flex justify-center items-center">&checkmark;</span>Sabari</a>
+                </li>
+                <li>
+                    <a href="https://www.linkedin.com/in/monishaakm/"><span class="font-black bg-box-bg rounded-full w-8 h-8 mr-3 text-primary inline-flex justify-center items-center">&checkmark;</span>Monishaa A</a>
+                </li>
+                <li>
+                    <a href="https://www.linkedin.com/in/kishore-kumar-lkk/"><span class="font-black bg-box-bg rounded-full w-8 h-8 mr-3 text-primary inline-flex justify-center items-center">&checkmark;</span>Kishore Kumar</a>
                 </li>
             </ul>
             <Paragraph className="mt-8">
