--- a/src/components/sections/Features.astro
+++ b/src/components/sections/Features.astro
@@ -35,7 +35,7 @@ import Title from "../shared/Title.astro";
                     <a href="https://www.linkedin.com/in/sabari-h-80812221b/"><span class="font-black bg-box-bg rounded-full w-8 h-8 mr-3 text-primary inline-flex justify-center items-center">&checkmark;</span>Sabari</a>
                 </li>
                 <li>
-                    <a href="https://www.linkedin.com/in/monishaakm/"><span class="font-black bg-box-bg rounded-full w-8 h-8 mr-3 text-primary inline-flex justify-center items-center">&checkmark;</span>Monishaa Aravindh</a>
+                    <a href="https://www.linkedin.com/in/monishaakm/"><span class="font-black bg-box-bg rounded-full w-8 h-8 mr-3 text-primary inline-flex justify-center items-center">&checkmark;</span>Monishaa</a>
                 </li>
                 <li>
                     <a href="https://www.linkedin.com/in/kishore-kumar-lkk/"><span class="font-black bg-box-bg rounded-full w-8 h-8 mr-3 text-primary inline-flex justify-center items-center">&checkmark;</span>Kishore Kumar</a>
